--- a/scram/templates/route_manager/entry_list.html
+++ b/scram/templates/route_manager/entry_list.html
@@ -82,16 +82,73 @@
         <h2 class="text-center mt-2">{{ actiontype.name }}
           <span class="badge badge-secondary badge-pill">{{ entry_list.total }}</span>
         </h2>
-        {% for entry in entry_list.objs %}
-            {% if actiontype.name|lower == entry.actiontype|lower %}
-              <li class="list-group-item list-group-item-light text-center">
-                <a class="link" href="{% url 'route_manager:detail' entry.id %}">
-                  {{ entry.route }} - Expires: {{ entry.expiration }}</a>
-             <i class="fa fa-question-circle" title="Current status unknown" id="entry_status_{{ entry.pk }}"></i><script>getStatus("{{ entry.route }}", "{{ entry.pk }}");</script>
-             </li>
-            {% endif %}
-        {% endfor %}
+        {% if entry_list.objs %}
+          {% for entry in entry_list.objs %}
+              {% if actiontype.name|lower == entry.actiontype|lower %}
+                <li class="list-group-item list-group-item-light text-center">
+                  <a class="link" href="{% url 'route_manager:detail' entry.id %}">
+                    {{ entry.route }} - Expires: {{ entry.expiration }}</a>
+               <i class="fa fa-question-circle" title="Current status unknown" id="entry_status_{{ entry.pk }}"></i><script>getStatus("{{ entry.route }}", "{{ entry.pk }}");</script>
+               </li>
+              {% endif %}
+          {% endfor %}
+        {% endif %}
       {% endif %}
     </div>
   {% endfor %}
+  </div>
+
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center mt-4">
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page=1" aria-label="First">
+            <span aria-hidden="true">&laquo;&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&laquo;&laquo;</a>
+        </li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&laquo;</a>
+        </li>
+      {% endif %}
+
+      {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
+          <li class="page-item active" aria-current="page">
+            <span class="page-link" style="background-color:#a2a3a5">{{ i }}</span>
+          </li>
+        {% else %}
+          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+            <span aria-hidden="true">&raquo;&raquo;</span>
+          </a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&raquo;</a>
+        </li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&raquo;&raquo;</a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
 {% endblock %}
