--- a/scram/templates/navbar.html
+++ b/scram/templates/navbar.html
@@ -10,7 +10,7 @@
       <input class="form-control pl-2 me-2" name="cidr" type="search" placeholder="cidr">
       <button class="btn btn-info mb-2" style="background-color:#2ba6c8!important;" type="submit">Search</button>
     </form>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
